[gd_scene load_steps=15 format=3 uid="uid://bq3qqdmwwxtb4"]

[ext_resource type="Script" uid="uid://vw5hsuy68m8e" path="res://scripts/tela_final.gd" id="1_4niyf"]
[ext_resource type="FontFile" uid="uid://cs3b66q3uty2s" path="res://shaders/RevMiniPixel.ttf" id="1_dqpfq"]
[ext_resource type="Theme" uid="uid://ccklhxakyjnje" path="res://shaders/pause.tres" id="3_xwrri"]
[ext_resource type="Texture2D" uid="uid://5r407i6tqmqa" path="res://assets/Tela de titulo/YPEEEE.png" id="4_8na46"]
[ext_resource type="AudioStream" uid="uid://bfqtgiykoi173" path="res://assets/Sons/musica de fundo/encerramento.mp3" id="5_xwrri"]
[ext_resource type="Script" uid="uid://dmabx4ad3d0w2" path="res://scripts/estatisticas.gd" id="6_e1n2v"]
[ext_resource type="Texture2D" uid="uid://cyewpe76nytjw" path="res://assets/Tela_final/relogio1.png" id="7_2tmoy"]
[ext_resource type="Texture2D" uid="uid://dcaa7tejy5hb7" path="res://assets/Tela_final/relogio2.png" id="8_41ml6"]
[ext_resource type="Texture2D" uid="uid://b3rdlp5jfm67i" path="res://assets/player/icone morto/sprite_0.png" id="8_ak3p8"]
[ext_resource type="Texture2D" uid="uid://wqmfq5odpwfo" path="res://assets/Tela_final/relogio3.png" id="9_dna5m"]
[ext_resource type="Texture2D" uid="uid://mdfs23owrqm6" path="res://assets/Tela_final/relogio4.png" id="10_74d5b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xwrri"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qblif"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e1n2v"]

[node name="tela_final" type="CanvasLayer"]
script = ExtResource("1_4niyf")

[node name="bg" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.254902)
metadata/_edit_use_anchors_ = true

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.369767
anchor_top = 0.439577
anchor_right = 0.629457
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="menu_holder"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.184314, 0.960784, 0.862745, 1)
theme_override_fonts/font = ExtResource("1_dqpfq")
theme_override_font_sizes/font_size = 40
text = "OBRIGADO POR JOGAR!!"

[node name="HSeparator" type="HSeparator" parent="menu_holder"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_xwrri")

[node name="HSeparator2" type="HSeparator" parent="menu_holder"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qblif")

[node name="HSeparator3" type="HSeparator" parent="menu_holder"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_e1n2v")

[node name="voltar" type="Button" parent="menu_holder"]
layout_mode = 2
theme = ExtResource("3_xwrri")
text = "VOLTAR AO MENU"

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 89.0
offset_top = 351.0
offset_right = 412.0
offset_bottom = 659.0
texture = ExtResource("4_8na46")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_xwrri")
volume_db = -15.0
autoplay = true
parameters/looping = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_e1n2v")

[node name="icon_fase1" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 43.0
offset_top = 12.0
offset_right = 65.0
offset_bottom = 33.0
scale = Vector2(4, 4)
texture = ExtResource("7_2tmoy")
stretch_mode = 5

[node name="tempo_fase1" type="Label" parent="Control"]
layout_mode = 0
offset_left = 152.0
offset_top = 31.0
offset_right = 256.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("1_dqpfq")
theme_override_font_sizes/font_size = 24
text = "Fase 1: 00:00"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="icon_fase2" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 43.0
offset_top = 99.0
offset_right = 65.0
offset_bottom = 120.0
scale = Vector2(4, 4)
texture = ExtResource("8_41ml6")
stretch_mode = 5

[node name="tempo_fase2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 151.0
offset_top = 116.0
offset_right = 257.0
offset_bottom = 165.0
theme_override_fonts/font = ExtResource("1_dqpfq")
theme_override_font_sizes/font_size = 24
text = "Fase 2: 00:00"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="icon_fase3" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 43.0
offset_top = 186.0
offset_right = 65.0
offset_bottom = 207.0
scale = Vector2(4, 4)
texture = ExtResource("9_dna5m")
stretch_mode = 5

[node name="tempo_fase3" type="Label" parent="Control"]
layout_mode = 0
offset_left = 156.0
offset_top = 199.0
offset_right = 262.0
offset_bottom = 248.0
theme_override_fonts/font = ExtResource("1_dqpfq")
theme_override_font_sizes/font_size = 24
text = "Fase 3: 00:00"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="icon_total" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 43.0
offset_top = 273.0
offset_right = 65.0
offset_bottom = 294.0
scale = Vector2(4, 4)
texture = ExtResource("10_74d5b")
stretch_mode = 5

[node name="tempo_total" type="Label" parent="Control"]
layout_mode = 0
offset_left = 146.0
offset_top = 295.0
offset_right = 310.0
offset_bottom = 344.0
theme_override_fonts/font = ExtResource("1_dqpfq")
theme_override_font_sizes/font_size = 24
text = "Tempo Total: 00:00"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="dead_icon" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 1170.0
offset_top = 56.0
offset_right = 1194.0
offset_bottom = 72.0
scale = Vector2(4, 4)
texture = ExtResource("8_ak3p8")
flip_h = true

[node name="death_counter" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1081.0
offset_top = 68.0
offset_right = 1146.0
offset_bottom = 123.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_dqpfq")
theme_override_font_sizes/font_size = 40
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="menu_holder/voltar" to="." method="_on_voltar_pressed"]
